# Shell-Terminal--C

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  shell_test[1]_include.cmake  shell_test[1]_tests.cmake
.nvim/: CMakeLists.txt.2024-02-07T15:42:14-08:00  CMakeLists.txt.2024-02-07T15:48:14-08:00  CMakeLists.txt.2024-02-07T15:49:38-08:00  CMakeLists.txt.2024-02-07T15:53:17-08:00  CMakeLists.txt.2024-02-07T15:58:43-08:00  CMakeLists.txt.2024-02-19T18:42:35-08:00  CMakeLists.txt.2024-02-20T13:51:47-08:00  CMakeLists.txt.2024-02-20T13:52:26-08:00  CMakeLists.txt.2024-02-20T13:57:40-08:00  CMakeLists.txt.2024-02-20T14:03:58-08:00  CMakeLists.txt.2024-02-20T14:08:58-08:00  CMakeLists.txt.2024-02-20T14:10:17-08:00  CMakeLists.txt.2024-02-20T14:14:31-08:00  CMakeLists.txt.2024-02-22T01:07:08-08:00  getcwd.c.2024-02-13T21:30:52-08:00  getcwd.c.2024-02-19T18:25:29-08:00  shell.c.2024-02-13T15:51:04-08:00  shell.c.2024-02-13T15:51:39-08:00  shell.c.2024-02-19T18:41:33-08:00  shell.c.2024-02-20T13:21:16-08:00  shell.c.2024-02-20T13:23:41-08:00  shell.c.2024-02-20T13:25:06-08:00
.record/: input.0.2024-02-13T19:02:56  input.0.2024-02-13T19:02:56.hash  input.1.2024-02-07T15:42:15  input.1.2024-02-07T15:42:15.hash  input.1.2024-02-07T15:43:02  input.1.2024-02-07T15:43:02.hash  input.1.2024-02-19T19:01:59  input.1.2024-02-19T19:01:59.hash  input.1.2024-02-20T12:19:48  input.1.2024-02-20T12:19:48.hash  input.1.2024-02-20T12:23:55  input.1.2024-02-20T12:23:55.hash  input.1.2024-02-20T13:24:26  input.1.2024-02-20T13:24:26.hash  (+13 more)
(+580 files in other folders)
